# MedBill-Snap-Desktop

./: .gitignore  HANDOFF.md  LICENSE  README.md  RELEASE.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
_legacy_hcpcs_frontend/: App.tsx  api.ts  export.ts  state.tsx  types.ts
_legacy_hcpcs_frontend/components/: AddCodeModal.tsx  AddToCollectionModal.tsx  CodeDetailView.tsx  CodeRow.tsx  CollectionFormModal.tsx  CollectionsView.tsx  FavoritesView.tsx  ModifierPickerSheet.tsx  ModifiersView.tsx  SearchView.tsx  SettingsView.tsx
src/: App.tsx  api.ts  export.ts  settings.tsx  state.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: abbreviations.rs  lib.rs  license.rs  main.rs  medbill.rs  menu.rs  pdf.rs  store.rs
src/components/: AddToCollectionModal.tsx  CCMCCCalculatorView.tsx  CodeDetailView.tsx  CodeRow.tsx  CollectionsView.tsx  CommandPalette.tsx  DRGBrowserView.tsx  FavoritesView.tsx  SearchView.tsx  SettingsView.tsx  Splitter.tsx  StatusBar.tsx  Toaster.tsx
src/hooks/: useListKeyNav.ts
