[package]
name = "medbillsnap"
version = "1.0.0"
description = "MedBill Snap — fast offline POS / HCPCS modifier / MS-DRG / ICD→DRG lookup"
authors = ["Ryan"]
edition = "2021"
license = "MIT"

[lib]
name = "medbillsnap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
printpdf = "0.8"
ureq = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
